discussion/kv_engine/167032/167032_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-XXXXX: Track PagingVisitor time spent deleting expired items

PagingVisitor visits each vbucket in turn, collecting expired items in
a list. These items are deleted after the corresponding vbucket visit
ends, before the next vbucket is visited.

When investigating expiry-heavy workloads, it is helpful to be able to
determine what percentage of the runtime is spent walking the
HashTable to find expired items vs actually deleting the items.

Add `pager_expired_item_deletion_time` tracking the time spent deleting
items.

Change-Id: I8632aff5f121b9a3ac7f9af1ae262995fa2b547c

======================================================================================================================
COMMENTS
======================================================================================================================
Author: James H
Date: 2021-12-06 13:25:21.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-12-06 13:35:24.000000000
Message: 
Patch Set 1: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/35837/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/paging_visitor.cc:256:5:
error: use of undeclared identifier "start"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/35837/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/42250/ : FAILURE

Compile error at C:/Jenkins/workspace/kv_engine-windows-master/kv_engine/engines/ep/src/paging_visitor.cc(256): error C2065: "start": undeclared identifier ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/42250/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/14373/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/paging_visitor.cc:256:5: error: use of undeclared identifier "start" [clang-diagnostic-error]
    start = steady_clock::now();
    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/paging_visitor.cc:259:63: error: use of undeclared identifier "start" [clang-diagnostic-error]
            duration_cast<microseconds>(steady_clock::now() - start).count();
                                                              ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/14373/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/paging_visitor.cc:256:5:
error: use of undeclared identifier "start" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/14373/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/15174/ : FAILURE

Compile error at [2021-12-06T13:27:50.535Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master@2/kv_engine/engines/ep/src/paging_visitor.cc:256:5:
error: use of undeclared identifier "start"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/15174/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/4078/ : FAILURE

Compile error at [2021-12-06T13:32:52.661Z] /home/couchbase/jenkins/workspace/kv_engine.aarch64-linux_master@10/kv_engine/engines/ep/src/paging_visitor.cc:256:5:
error: ?start? was not declared in this scope; did you mean ?stat??
 ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/4078/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/16000/ : FAILURE

Compile error at [2021-12-06T13:27:27.210Z] /home/couchbase/jenkins/workspace/kv_engine.linux-CE_master/kv_engine/engines/ep/src/paging_visitor.cc:256:5:
error: ?start? was not declared in this scope; did you mean ?stat??
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/16000/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/17070/ : FAILURE

Compile error at [2021-12-06T13:31:22.989Z] /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_master@2/kv_engine/engines/ep/src/paging_visitor.cc:256:5:
error: use of undeclared identifier "start"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/17070/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/4020/ : FAILURE

Compile error at [2021-12-06T13:29:09.445Z] /home/couchbase/jenkins/workspace/kv_engine.libFuzzer_master/kv_engine/engines/ep/src/paging_visitor.cc:256:5:
error: use of undeclared identifier "start"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/4020/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/24409/ : FAILURE

Compile error at [2021-12-06T13:31:16.548Z] /home/couchbase/jenkins/workspace/kv_engine.ASan-UBSan_master/kv_engine/engines/ep/src/paging_visitor.cc:256:5:
error: use of undeclared identifier "start"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/24409/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/16292/ : FAILURE

Compile error at [2021-12-06T13:27:40.271Z] /home/couchbase/jenkins/workspace/kv_engine.linux_master/kv_engine/engines/ep/src/paging_visitor.cc:256:5:
error: ?start? was not declared in this scope; did you mean ?stat??
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/16292/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/13190/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
